--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>授業内容表 自動作成サイト</title>
+<link rel="icon" href="favicon.ico">
 <style>
 body{
   background:#e8ecf2;
